--- a/brand.html
+++ b/brand.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>ТиниВини - каталог с фильтром</title>
+	<title>ТиниВини - бренд Royal Canin</title>
 	<meta name="description" content=""/>
 	<meta name="author" content=""/>
 	<meta name="viewport" content="width=device-width"/>
@@ -149,188 +149,203 @@
 	<div class="width">
 		<div class="float-cont breadcrumb-cont">
 			<div class="breadcrumb fleft">
-				<a href="index.html" class="bread">Главная</a><span class="sep">/</span>
-				<a href="catalog.html" class="bread">Собаки</a><span class="sep">/</span>
-				<a href="" class="bread-current">Корма</a>
-			</div>
-			<div class="fright small-select">
-				<div class="fs11 ib">Смотрите также для собак:</div>
-				<select class="select2" style="width: 160px;">
-					<option>Миски</option>
-					<option>Лечебные добавки</option>
-					<option>Витамины</option>
-					<option>Диетические корма</option>
-				</select>
+				<a href="" class="bread">Главная</a><span class="sep">/</span>
+				<a href="" class="bread-current">Royal Canin</a>
 			</div>
 		</div>
 		<div class="float-cont">
 			<div class="sidebar">
-				<div class="breed-cont popup-cont">
-					<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
-					<div class="tip-layer">
-						<div class="tip-corner"></div>
-						<div class="tip-content">
-							У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!
-						</div>
-					</div>
-					<div class="popup-layer">
-						<div class="popup-inner">
-							<form>
-								Любимая порода
-								<div class="tags">
-									<!-- see catalog_breed.html page for variant of this block -->
-								</div>
-								<div class="autocomplete-cont">
-									<input type="text" class="tag-input" value="Ма"/>
-									<a href="" class="btn autocomplete-submit">Выбрать</a>
-									<div class="autocomplete">
-										<div class="autocomplete-line">Мальтезе</div>
-										<div class="autocomplete-line">Малая аппенинская гончая</div>
-										<div class="autocomplete-line">Малинуа</div>
-										<div class="autocomplete-line">Малый брабансон</div>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="popup-close"></div>
-						<div class="popup-corner"></div>
-					</div>
-				</div>
-				<div class="level-up"><a href="catalog.html">Каталог для собак</a></div>
 				<div class="filter-cont sh">
-					<div class="catalog-title">Корма</div>
+					<div class="catalog-title">Royal Canin</div>
 					<div class="filter-block opened default-opened">
-						<div class="filter-title">Тип корма:<span class="filter-title-arrow"></span></div>
-						<ul class="filter-content">
-							<li class="filter-option"><div class="inner-border">Сухие корма<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Консервы<span class="super-txt">(81)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Лакомства<span class="super-txt">(34)</span><span class="option-del"></span></div></li>
-						</ul>
-					</div>
-					<div class="filter-block opened default-opened">
-						<div class="filter-title">Цена:<span class="filter-title-arrow"></span></div>
-						<div class="slider-form filter-content">
-							<div class="slider-range-cont">
-								<div class="slider-range"></div>
-							</div>	
-							<div class="float-cont">
-								<div class="fleft">
-									от
-									<div><input type="text" class="min"/></div>
-								</div>
-								<div class="fright">
-									до
-									<div><input type="text" class="max"/></div>
-								</div>
-							</div>
+						<div class="filter-title special-title">Собаки:<span class="filter-title-arrow"></span></div>
+						<div class="subcontent">
+							<ul class="catalog-list">
+								<li><a href="filter.html" class="inner-border">Корма<span class="super-txt">(62)</span></a></li>
+								<li><a href="filter.html" class="inner-border">Здоровье<span class="super-txt">(18)</span></a></li>
+								<li><a href="filter.html" class="inner-border">Гигиена и уборка<span class="super-txt">(7)</span></a></li>
+							</ul>
 						</div>
 					</div>
 					<div class="filter-block">
-						<div class="filter-title">Возраст:<span class="filter-title-arrow"></span></div>
-						<ul class="filter-content">
-							<li class="filter-option"><div class="inner-border">Щенок<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Взрослая собака<span class="super-txt">(81)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Старая собака<span class="super-txt">(34)</span><span class="option-del"></span></div></li>
-						</ul>
-					</div>
-					<div class="filter-block opened default-opened">
-						<div class="filter-title special-title">Бренд:<span class="filter-title-arrow"></span></div>
+						<div class="filter-title special-title">Кошки:<span class="filter-title-arrow"></span></div>
 						<div class="subcontent">
-							<ul class="filter-content">
-								<li class="filter-option">
-									<div class="inner-border">Acana<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
-								<li class="filter-option">
-									<div class="inner-border">Advance<span class="super-txt">(81)</span><span class="option-del"></span></div>
-								</li>
-								<li class="filter-option">
-									<div class="inner-border">Bozita<span class="super-txt">(34)</span><span class="option-del"></span></div>
-								</li>
+							<ul class="catalog-list">
+								<li><a href="filter.html" class="inner-border">Корма<span class="super-txt">(62)</span></a></li>
+								<li><a href="filter.html" class="inner-border">Здоровье<span class="super-txt">(18)</span></a></li>
+								<li><a href="filter.html" class="inner-border">Гигиена и уборка<span class="super-txt">(7)</span></a></li>
 							</ul>
-							<div class="brand-more filter-section">
-								<ul class="catalog-list">
-									<li class="catalog-list-link filter-option">
-										<div class="inner-border">Brown<span class="super-txt">(34)</span><span class="option-del"></span></div>
-									</li>
-									<li class="catalog-list-link filter-option">
-										<div class="inner-border">Pedigree<span class="super-txt">(34)</span><span class="option-del"></span>
-										</div>
-									</li>
-									<li class="catalog-list-link filter-option">
-										<div class="inner-border">Loly loly<span class="super-txt">(34)</span><span class="option-del"></span>
-										</div>
-									</li>
-									<li class="catalog-list-link filter-option">
-										<div class="inner-border">Whiskas<span class="super-txt">(34)</span><span class="option-del"></span></div>
-									</li>
-								</ul>
-								<div class="brand-btn-cont">
-									<a href="" class="btn btn-block" data-originaltxt="Показать еще (4)">Показать еще (4)</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="filter-cont sh">
+					<div class="catalog-title">Похожие бренды</div>
+					<ul class="catalog-list mb0">
+						<li><a href="brand.html" class="inner-border">Acana</a></li>
+						<li><a href="brand.html" class="inner-border">Dr. Clauder`s</a></li>
+						<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+						<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+					</ul>
+					<div class="brand-more">
+						<ul class="catalog-list">
+							<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+							<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+							<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+							<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+							<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+							<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+							<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+							<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+							<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+							<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+							<li><a href="brand.html" class="inner-border">New brand 1</a></li>
+							<li><a href="brand.html" class="inner-border">New brand 2</a></li>
+							<li><a href="brand.html" class="inner-border">Happy Dog</a></li>
+							<li><a href="brand.html" class="inner-border">Pedigree</a></li>
+							<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
+						</ul>
+						<div class="brand-btn-cont">
+							<a href="" class="btn btn-block" data-originaltxt="Показать еще (15)">Показать еще (15)</a>
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div class="right-content">
+				<div class="bn sh"><img src="images/upload/bn.png" alt=""/></div>
+
+				<h1>Лучшее из Royal Canin</h1>
+
+				<div class="catalog sh show-category mb36">
+					<div class="p20 float-cont">
+						<div class="line">
+							<div class="catalog-item">
+								<div class="quick-view-btn">
+									<span class="qv"></span>Быстрый просмотр
+								</div>
+								<div class="catalog-item-img">
+									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+								</div>
+								<div class="catalog-item-brand"><a href="">OZ-Pet</a></div>
+								<div class="catalog-item-title"><a href="">Корм универсальный для собак</a></div>
+								<div class="float-cont">
+									<div class="catalog-item-price">
+										<div class="fs11">Цена</div>
+										<select class="select2-complex">
+											<option selected data-volume="2,5 кг">725 Р</option>
+											<option data-volume="1 кг">320 Р</option>
+											<option data-volume="0,5 кг">150 Р</option>
+										</select>
+									</div>
+									<div class="catalog-item-count">
+										<div class="fs11">Кол-во</div>
+										<select class="select2">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+											<option>4</option>
+											<option>5</option>
+										</select>
+									</div>
+								</div>	
+								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
+								<div class="catalog-item-category">
+									В категории
+									<div class="catalog-item-category-link"><a href="">Уход за зубами</a>, <a href="">Лакомство для собак</a></div>
+								</div>
+							</div>
+
+							<div class="catalog-sep"></div>
+
+							<div class="catalog-item">
+								<div class="quick-view-btn">
+									<span class="qv"></span>Быстрый просмотр
+								</div>
+								<div class="catalog-item-img">
+									<a href=""><img src="images/upload/c2.jpg" alt=""/></a>
+								</div>
+								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
+								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
+								<div class="float-cont">
+									<div class="catalog-item-price">
+										<div class="fs11">Цена</div>
+										<select class="select2-complex">
+											<option selected data-volume="3,5 кг">1 200 Р</option>
+											<option data-volume="2 кг">920 Р</option>
+											<option data-volume="0,5 кг">550 Р</option>
+										</select>
+									</div>
+									<div class="catalog-item-count">
+										<div class="fs11">Кол-во</div>
+										<select class="select2">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+											<option>4</option>
+											<option>5</option>
+										</select>
+									</div>
+								</div>	
+								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
+								<div class="catalog-item-category">
+									В категории
+									<div class="catalog-item-category-link"><a href="">Консервы для щенков</a></div>
+								</div>
+							</div>
+
+							<div class="catalog-sep"></div>
+
+							<div class="catalog-item">
+								<div class="quick-view-btn">
+									<span class="qv"></span>Быстрый просмотр
+								</div>
+								<div class="catalog-item-img">
+									<a href=""><img src="images/upload/c1.jpg" alt=""/></a>
+								</div>
+								<div class="catalog-item-brand"><a href="">Royal Canin</a></div>
+								<div class="catalog-item-title"><a href="">Urban Life Junior Wet, корм влажный для щенков...</a></div>
+								<div class="float-cont">
+									<div class="catalog-item-price">
+										<div class="fs11">Цена</div>
+										<select class="select2-complex">
+											<option selected data-volume="3,5 кг">1 200 Р</option>
+											<option data-volume="2 кг">920 Р</option>
+											<option data-volume="0,5 кг">550 Р</option>
+										</select>
+									</div>
+									<div class="catalog-item-count">
+										<div class="fs11">Кол-во</div>
+										<select class="select2">
+											<option>1</option>
+											<option>2</option>
+											<option>3</option>
+											<option>4</option>
+											<option>5</option>
+										</select>
+									</div>
+								</div>	
+								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
+								<div class="catalog-item-category">
+									В категории
+									<div class="catalog-item-category-link"><a href="">Консервы для щенков</a></div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="filter-btn">
-						<a href="" class="btn btn-med">Показать</a><a href="" class="btn-reset">Сбросить</a>
-					</div>
+					</div>	
 				</div>
-			</div>
-			<div class="right-content">
-				<h1>Корма</h1>
-				<div class="quick-variant float-cont bx-cont">
-					<div class="bxslider">
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Все</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Для взрослых собак</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Для кастрированных собак</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Корм для шерсти</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">123</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">4</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">5</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">6</a><span class="super-txt">(437)</span></div>
-							</div>
+
+				<h2 class="h1">Все товары бренда Royal Canin</h2>
+				
+				<div class="catalog sh show-category mb36">
+					<div class="search-top ver-inline">
+						<div class="ver-inline-title">Показать товары из разделов:</div>
+						<div class="tags toggle-tags">
+							<div class="tag">Собаки<span class="tag-remove"></span></div>
+							<div class="tag">Кошки<span class="tag-remove"></span></div>
+							<div class="tag">Грызуны<span class="tag-remove"></span></div>
 						</div>
 					</div>
-					<div class="bx-arrow-left"></div>
-					<div class="bx-arrow-right"></div>
-				</div>
-				<div class="catalog sh">
 					<div class="float-cont sort">
 						<div class="fleft">
 							<div class="sort-title">Сортировать по:</div>
@@ -697,10 +712,10 @@
 						</div>
 						<div class="fright"><a href="" class="top-page">Наверх</a></div>
 					</div>
-
 				</div>
+
 				<div class="sh p20 def-color">
-					<h3>Корма</h3>
+					<h3>Royal Canin - более 20 лет заботится о питомцах!</h3>
 					<p>Небольшой сео текст с названиями популярных брендов и товарами.</p>
 
 					<p>Магазин «ТинниВинни» создавался, чтобы ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p> 
@@ -709,6 +724,7 @@
 
 					<p>Магазин «ТинниВинни» создавался, чтобы ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p> 
 				</div>
+
 			</div>
 		</div>
 	</div>
