--- a/search_result.html
+++ b/search_result.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>ТиниВини - каталог с фильтром</title>
+	<title>ТиниВини - результаты поиска</title>
 	<meta name="description" content=""/>
 	<meta name="author" content=""/>
 	<meta name="viewport" content="width=device-width"/>
@@ -149,64 +149,14 @@
 	<div class="width">
 		<div class="float-cont breadcrumb-cont">
 			<div class="breadcrumb fleft">
-				<a href="index.html" class="bread">Главная</a><span class="sep">/</span>
-				<a href="catalog.html" class="bread">Собаки</a><span class="sep">/</span>
-				<a href="" class="bread-current">Корма</a>
-			</div>
-			<div class="fright small-select">
-				<div class="fs11 ib">Смотрите также для собак:</div>
-				<select class="select2" style="width: 160px;">
-					<option>Миски</option>
-					<option>Лечебные добавки</option>
-					<option>Витамины</option>
-					<option>Диетические корма</option>
-				</select>
+				<a href="" class="bread">Главная</a><span class="sep">/</span>
+				<a href="" class="bread-current">Собаки</a>
 			</div>
 		</div>
 		<div class="float-cont">
 			<div class="sidebar">
-				<div class="breed-cont popup-cont">
-					<a href="#" class="popup-btn btn-big btn breed-btn" data-yoffset="50">Выбрать породу</a>
-					<div class="tip-layer">
-						<div class="tip-corner"></div>
-						<div class="tip-content">
-							У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!
-						</div>
-					</div>
-					<div class="popup-layer">
-						<div class="popup-inner">
-							<form>
-								Любимая порода
-								<div class="tags">
-									<!-- see catalog_breed.html page for variant of this block -->
-								</div>
-								<div class="autocomplete-cont">
-									<input type="text" class="tag-input" value="Ма"/>
-									<a href="" class="btn autocomplete-submit">Выбрать</a>
-									<div class="autocomplete">
-										<div class="autocomplete-line">Мальтезе</div>
-										<div class="autocomplete-line">Малая аппенинская гончая</div>
-										<div class="autocomplete-line">Малинуа</div>
-										<div class="autocomplete-line">Малый брабансон</div>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="popup-close"></div>
-						<div class="popup-corner"></div>
-					</div>
-				</div>
-				<div class="level-up"><a href="catalog.html">Каталог для собак</a></div>
 				<div class="filter-cont sh">
-					<div class="catalog-title">Корма</div>
-					<div class="filter-block opened default-opened">
-						<div class="filter-title">Тип корма:<span class="filter-title-arrow"></span></div>
-						<ul class="filter-content">
-							<li class="filter-option"><div class="inner-border">Сухие корма<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Консервы<span class="super-txt">(81)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Лакомства<span class="super-txt">(34)</span><span class="option-del"></span></div></li>
-						</ul>
-					</div>
+					<div class="catalog-title">Фильтр</div>
 					<div class="filter-block opened default-opened">
 						<div class="filter-title">Цена:<span class="filter-title-arrow"></span></div>
 						<div class="slider-form filter-content">
@@ -225,12 +175,18 @@
 							</div>
 						</div>
 					</div>
-					<div class="filter-block">
+					<div class="filter-block opened default-opened">
 						<div class="filter-title">Возраст:<span class="filter-title-arrow"></span></div>
 						<ul class="filter-content">
-							<li class="filter-option"><div class="inner-border">Щенок<span class="super-txt">(159)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Взрослая собака<span class="super-txt">(81)</span><span class="option-del"></span></div></li>
-							<li class="filter-option"><div class="inner-border">Старая собака<span class="super-txt">(34)</span><span class="option-del"></span></div></li>
+							<li class="filter-option">
+								<div class="inner-border">Щенок<span class="super-txt">(159)</span><span class="option-del"></span></div>
+							</li>
+							<li class="filter-option">
+								<div class="inner-border">Взрослая собака<span class="super-txt">(81)</span><span class="option-del"></span></div>
+							</li>
+							<li class="filter-option">
+								<div class="inner-border">Старая собака<span class="super-txt">(34)</span><span class="option-del"></span></div>
+							</li>
 						</ul>
 					</div>
 					<div class="filter-block opened default-opened">
@@ -268,69 +224,30 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>	
 					<div class="filter-btn">
 						<a href="" class="btn btn-med">Показать</a><a href="" class="btn-reset">Сбросить</a>
 					</div>
-				</div>
+				</div>	
 			</div>
 			<div class="right-content">
-				<h1>Корма</h1>
-				<div class="quick-variant float-cont bx-cont">
-					<div class="bxslider">
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Все</a><span class="super-txt">(437)</span></div>
-							</div>
+				<h1>Результаты поиска</h1>
+				
+				<div class="catalog sh show-category">
+					<div class="search-top">
+						<div class="float-cont">
+							<form class="search-block full">
+								<input type="text" class="search-input dark" value="Поводок" />
+								<input type="submit" class="search-sub" value=""/>
+							</form>
 						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Для взрослых собак</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Для кастрированных собак</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">Корм для шерсти</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">123</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">4</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">5</a><span class="super-txt">(437)</span></div>
-							</div>
-						</div>
-						<div class="quick-slide-sh">
-							<div class="quick-slide">
-								<div class="quick-img"><a href=""><img src="images/upload/q1.jpg" alt=""/></a></div>
-								<div class="quick-name"><a href="">6</a><span class="super-txt">(437)</span></div>
-							</div>
+						<div>Найдено <span class="b">23</span> товара в следующих разделах:</div>
+						<div class="tags toggle-tags">
+							<div class="tag">Собаки<span class="tag-remove"></span></div>
+							<div class="tag">Кошки<span class="tag-remove"></span></div>
+							<div class="tag">Грызуны<span class="tag-remove"></span></div>
 						</div>
 					</div>
-					<div class="bx-arrow-left"></div>
-					<div class="bx-arrow-right"></div>
-				</div>
-				<div class="catalog sh">
 					<div class="float-cont sort">
 						<div class="fleft">
 							<div class="sort-title">Сортировать по:</div>
@@ -697,17 +614,6 @@
 						</div>
 						<div class="fright"><a href="" class="top-page">Наверх</a></div>
 					</div>
-
-				</div>
-				<div class="sh p20 def-color">
-					<h3>Корма</h3>
-					<p>Небольшой сео текст с названиями популярных брендов и товарами.</p>
-
-					<p>Магазин «ТинниВинни» создавался, чтобы ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p> 
-
-					<p>Небольшой сео текст с названиями популярных брендов и товарами.</p>
-
-					<p>Магазин «ТинниВинни» создавался, чтобы ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p> 
 				</div>
 			</div>
 		</div>
