--- a/index.html
+++ b/index.html
@@ -770,31 +770,34 @@
 	<div class="layer" id="layer-status">
 		<div class="layer-inner w240">
 			<h3>Статус заказа</h3>
-			
 			<form>
-				<div class="layer-note">Укажите номер заказа (6 цифр)</div>
-				<input type="text" class="def-input" placeholder=""/>
-				<div class="sub-cont"><input type="submit" class="btn btn-block" value="Отправить"/></div>
+				<div class="layer-note3">Укажите номер заказа (6 цифр)</div>
+				<input type="text" class="def-input" placeholder="123456"/>
+				<div class="mb36">
+					<input type="submit" class="btn btn-block" value="Отправить"/>
+				</div>
 
 				<div class="layer-note">
 				Если вы не помните номер заказа,
 				укажите номер телефона или e-mail,
 				которые вы использовали при оформлении заказа. Ответ придет на телефон или e-mail.
-				<input type="text" class="def-input" placeholder=""/>
-				<div class="sub-cont"><input type="submit" class="btn btn-block" value="Отправить"/></div>
+				</div>
+				<input type="text" class="def-input" placeholder="Телефон или e-mail"/>
+				<div class="mb36"><input type="submit" class="btn btn-block" value="Отправить"/></div>
 
-				<div>
-					Или позвоните по телефону: +7(495)111-11-11
+				<div class="layer-note2">
+					Или позвоните по телефону: 
+					<div class="h3 mb0">+7(495)111-11-11</div>
 				</div>
-				<div>			
-				Если вы зарегистрированы на сайте,
-				вы можете отслеживать статус
-				в Личном кабинете в разделе                 
-				Мои заказы
-				</div>
-				<a href="" class="btn btn-block">Войти в аккаунт</a>
-	
 			</form>
+		</div>
+		<div class="layer-btm w240">			
+			<div class="mb25">Если вы зарегистрированы на сайте,
+			вы можете отслеживать статус
+			в Личном кабинете в разделе                 
+			Мои заказы
+			</div>
+			<div><a href="" class="btn btn-block">Войти в аккаунт</a></div>
 		</div>
 	</div>
 	
